--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             Life
           </h1>
           <div class="desc">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis inventore expedita saepe vero soluta. Fugit!</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis inventore expedita saepe vero soluta. Fugit! Lorem, ipsum dolor.</p>
           </div>
           <div class="hero_button">
             <a href="" class="trial"> Get Free Trial! </a>
