--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <a href="" class="watch"> <i class="uil uil-airplay icon"></i> Watch Video</a>
           </div>
           <div class="scroll-down">
-            <i class="uil uil-arrow-down"></i>
+            <a href=""><i class="uil uil-arrow-down"></i></a>
           </div>
         </div>
 
